name:                nlpdemo
version:             0.1.0.0
synopsis:            Natural Language Processing
description:         NLP experiments
homepage:            markwatson.com
license:             AGPL
license-file:        LICENSE.txt
author:              Mark Watson
maintainer:          markw@markwatson.com
copyright:           2013-2015 Mark Watson  
category:            Research
build-type:          Simple
cabal-version:       >=1.10

executable nlpdemo
  ghc-options:         
  hs-source-dirs:      .
  main-is:             Categorize.hs
  build-depends:       haskell2010, containers, MissingH, yesod, json, encoding, split, download-curl, HTTP, text, transformers, tagsoup
  default-language:    Haskell2010
  