name:                nlp
version:             0.1.0.0
synopsis:            Natural Language Processing
description:         NLP experiments
homepage:            markwatson.com
license:             AGPL
license-file:        LICENSE.txt
author:              Mark Watson
maintainer:          markw@markwatson.com
copyright:           2013-2015 Mark Watson  
category:            Research
build-type:          Simple
cabal-version:       >=1.10

executable nlpdemo
  ghc-options:         
  hs-source-dirs:      .
  main-is:             WebApp.hs
  build-depends:       base > 4.8, containers, MissingH, yesod, yesod-core, json, encoding, split, HTTP, text, transformers
  default-language:    Haskell2010
  
